add wechat version 7.0.5